--- a/style.css
+++ b/style.css
@@ -1,16 +1,34 @@
-html, body {
+* {
+  box-sizing: border-box;
+  scroll-margin-top: 80px;
+}
+
+@media only screen and (max-width: 600px) {
+  * {
+    scroll-margin-top: 60px;
+  }
+}
+
+#contact {
+  scroll-margin-top: 0;
+}
+
+html {
+  scroll-behavior: smooth;
   background-color: black;
+}
+
+html, body {
+  position: relative;
   /* font-family: monospace, sans-serif; */
   font-family: 'Eudoxus Sans', sans-serif;
   font-size: 20px;
   width: 100%;
   height: 100%;
-  box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  padding: 8px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -19,26 +37,242 @@ body {
   }
 }
 
-.container {
-  width: 100%;
-  height: 100%;
+h1, h2 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.content {
+/*  */
+.text-3 {
+  font-size: 16px;
+  margin-top: 16px;
+  margin-bottom: 0;
+}
+.h-100 {
+  min-height: 100lvh;
+}
+/*  */
+
+.align-center {
+  align-items: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  color: #CCC5B8;
+}
+
+.container.light {
+  background-color: #fff;
+  color: #1C1B1B;
+}
+
+.hero-container {
+  min-height: initial;
+  height: 100%;
+  box-sizing: content-box;
+  transition: height .1s;
+  will-change: height;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* transition: transform .01s; */
+  will-change: transform;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  color: #CCC5B8;
+  /* transition: .2s; */
+  /* mix-blend-mode: difference; */
+}
+
+.header.scrolled {
+  background-color: #000;
+  /* color: #000; */
+  /* transition: .2s; */
+}
+
+.header-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  box-sizing: border-box;
+  flex-grow: 1;
+  max-width: 1200px;
   width: 100%;
-  height: 100%;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 20px;
+}
+
+.header-inner {
+  /* display: flex; */
+  /* align-items: center; */
+  width: 100%;
+}
+
+
+.header .particles {
+  opacity: 0;
+  transition: .2s;
+}
+
+.header.scrolled .particles {
+  opacity: 0.3;
+}
+
+.header-logo-box {
+  float: left;
+  margin-top: 6px;
+  margin-left: 20px;
+  visibility: hidden;
+  opacity: 0;
+  transition: .2s;
+}
+
+.header-logo {
+  /* display: block; */
+}
+
+.header.scrolled .header-logo-box {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+
+.nav {
+  float: right;
+  display: flex;
+  position: relative;
+  transition: transform .5s ease-in-out .05s, right .5s ease-in-out;
+  padding: 10px 20px;
+  right: 50%;
+  transform: translateX(50%);
+}
+
+@media (min-width: 769px) {
+  .header.scrolled .nav {
+    right: 0;
+    transform: translateX(0);
+  }
+}
+
+.nav-item {
+  /* background-color: rgba(255, 255, 255, 1); */
+  border-radius: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: inherit;
+  text-decoration: none;
+  /* padding: 0 5px; */
+  /* opacity: 0.95; */
+  transition: .2s;
+}
+
+.nav-item:hover {
+  opacity: 1;
+}
+
+.underlineThrough {
+  position: relative;
+}
+
+.underlineThrough:after {
+  content: '';
+  display: block;
+  position: absolute;
+  right: 0;
+  width: 0;
+  height: 2px;
+  background: #CCC5B8;
+  transition: all 0.3s ease;
+}
+
+.underlineThrough:hover:after {
+  left: 0;
+  width: 100%;
+}
+
+.arrow-down {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-size: 30px;
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+}
+
+
+@media (max-width: 768px) {
+  .header {
+    /* top: 100%; */
+    /* transform: translateY(-100%); */
+  }
+
+  .nav {
+    /* flex-direction: column; */
+    padding: 0;
+  }
+  .nav-item {
+    margin-right: 5px;
+    margin-left: 5px;
+    /* padding: 0!important;
+    text-align: right; */
+  }
+
+  .header-logo-box {
+    float: none;
+    text-align: center;
+    margin-left: 0;
+    margin-top: 0;
+    max-height: 0;
+  }
+
+  .header.scrolled .header-logo-box {
+    max-height: 22px;
+  }
+
+  .header-logo {
+    max-height: 22px;
+  }
+}
+
+
+.content {
+  /* position: relative; */
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+  width: 100%;
+  padding: 40px 20px;
   top: 0;
   left: 0;
-  text-align: center;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .hidden-headline {
@@ -82,21 +316,21 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-shrink: 0;
+  position: relative;
+  /* flex-shrink: 0; */
   height: 70px;
-  box-sizing: border-box;
   padding: 0 40px;
   font-size: 22px;
-  border: 2px solid #ffff;
-  color: #fff;
-  transition: .2s linear;
+  border: 2px solid #CCC5B8;
+  color: inherit;
+  transition: border .2s linear;
   text-decoration: none;
 }
 
 .contact.active,
 .contact:hover {
   /* background-color: #fff; */
-  border: 5px solid #ffff;
+  border: 5px solid #CCC5B8;
   /* animation: hide-show 1s alternate infinite linear; */
 }
 
@@ -115,10 +349,13 @@ body {
 
 .logo-box {
   position: relative;
-  margin-top: auto;
   width: 271px;
   height: 94px;
-  animation: 
+  transition: .1s;
+}
+
+.logo-box.scrolled {
+  opacity: 0;
 }
 
 .logo-box:hover .logo-glitch {
@@ -128,14 +365,15 @@ body {
 
 .logo {
   width: 271px;
-  height: 94px;
+  height: 100%;
+  transition: .1s;
 }
 
 
 .logo-glitch {
   position: absolute;
   width: 271px;
-  height: 94px;
+  height: 100%;
   left: 0;
   top: 0;
   /* opacity: 0; */
@@ -150,7 +388,7 @@ body {
 
 .glitch-filter-example__filtered-text {
   filter: url(#filter);
-  fill: white;
+  fill: #CCC5B8;
   /* font-family: "Share Tech Mono", sans-serif; */
   font-size: 100px;
   text-align: center;
@@ -374,16 +612,19 @@ body {
 */
 
 .particles {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
+  pointer-events: none;
   overflow: hidden;
 }
 
 .particle-box {
   position: absolute;
+  will-change: transform;
 }
 
 .particle-box.particle-anim-first {
@@ -430,35 +671,22 @@ body {
 
 }
 
-.particles.glitch .particle:before, .particles.glitch .particle:after,
-.particles.glitch .particle-electric:after,
-.particles.glitch .particle-electric:before {
-  opacity: 1;
-  /* width: 250%;
-  height: 250%;
-  left: -67%;
-  top: -67%; */
+@media (min-width: 768px) {
+  .particles.glitch .particle:before, .particles.glitch .particle:after,
+  .particles.glitch .particle-electric:after,
+  .particles.glitch .particle-electric:before {
+    opacity: 1;
+    /* width: 250%;
+    height: 250%;
+    left: -67%;
+    top: -67%; */
+  }
+
+  .particles.glitch .particle {
+    animation: skew-x-shaking-particle 0.2s linear infinite;
+  }
 }
 
-.particles.glitch .particle {
-  animation: skew-x-shaking-particle 0.2s linear infinite;
-}
-
-.particles.glitch .particle:before {
-  /* animation: skew-x-shaking 0.015s linear infinite; */
-}
-
-.particles.glitch .particle:after {
-  /* animation: skew-y-shaking 0.05s linear infinite; */
-}
-
-.particles.glitch .particle-electric:before {
-  /* animation: skew-x-shaking-2 0.023s linear infinite; */
-}
-
-.particles.glitch .particle-electric:after {
-  /* animation: skew-y-shaking-2 0.04s linear infinite; */
-}
 
 
 @keyframes animationFramesOne{
@@ -647,21 +875,21 @@ rotatedtxt css
 
 .rotatingText-adjective:nth-of-type(1) {
           animation-name: rotate;
-          animation-duration: 6.5s;
+          animation-duration: 10s;
           /* animation-delay: 0.5s; */
           animation-iteration-count: infinite;
 }
 
 .rotatingText-adjective:nth-of-type(2) {
           animation-name: rotate-2;
-          animation-duration: 6.5s;
+          animation-duration: 10s;
           /* animation-delay: 1.75s; */
           animation-iteration-count: infinite;
 }
 
 .rotatingText-adjective:nth-of-type(3) {
           animation-name: rotate-last;
-          animation-duration: 6.5s;
+          animation-duration: 10s;
           /* animation-delay: 3s; */
           animation-iteration-count: infinite;
 }
@@ -730,7 +958,7 @@ rotatedtxt css
 
 .rotatingText-adjective-inner {
   display: block;
-  color: white;
+  color: #CCC5B8;
   position: relative;
   margin: 0 auto;
 }
@@ -876,7 +1104,7 @@ rotatedtxt css
   text-align: center;
   text-shadow: -1px 0 red;
   top: 0;
-  color: white;
+  color: #CCC5B8;
   background: black;
   overflow: hidden;
   clip: rect(0, 900px, 0, 0);
@@ -892,7 +1120,7 @@ rotatedtxt css
   left: -2px;
   text-shadow: 1px 0 blue;
   top: 0;
-  color: white;
+  color: #CCC5B8;
   background: black;
   overflow: hidden;
   clip: rect(0, 900px, 0, 0);
@@ -931,26 +1159,6 @@ rotatedtxt css
 
 
 
-/* social */
-.socials {
-  display: flex;
-  margin-top: auto;
-  margin-bottom: 10px;
-  color: #fff
-}
-
-.social-item {
-  margin: 10px;
-  color: inherit;
-}
-
-.address {
-  padding: 0 10px;
-  text-align: center;
-  font-size: 12px;
-  color: #fff;
-  opacity: .5
-}
 
 .email-box {
   display: inline-block;
@@ -1021,7 +1229,6 @@ rotatedtxt css
 
   .social-item {
     margin-left: 5px;
-    margin-right: 5px;
   }
 
   .contact {
@@ -1031,3 +1238,392 @@ rotatedtxt css
   }
 }
 
+
+.service-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 36px auto;
+}
+
+.service-card {
+  text-align: left;
+  background: #EAE5DC;
+  padding: 20px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.service-card h3 {
+  color: #1C1B1B;
+  font-size: 18px;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.service-card p {
+  color: #666;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 5px 0;
+}
+
+@media (max-width: 768px) {
+  .service-cards {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+}
+
+@media (max-width: 480px) {
+  .service-cards {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .service-card {
+    padding: 10px;
+  } 
+}
+
+
+
+/*about*/
+.partners-grid {
+  width: 100%;
+  display: grid;
+  margin-top: 36px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 30px;
+  justify-items: center;
+}
+
+.partner-item {
+  display: flex;
+  flex-direction: column;
+  background-color: #f8f8f8;
+  padding: 35px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.partner-logo-box {
+  height: 58px;
+  margin-bottom: 20px;
+}
+
+.partner-logo {
+  object-fit: contain;
+}
+
+.partner-item h5 {
+  color: #333;
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.partner-item p {
+  font-size: 14px;
+  margin-top: 0;
+}
+
+@media (max-width: 768px) {
+  .partners-grid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+
+  .partner-logo {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media (max-width: 480px) {
+  .partners-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+/*about*/
+
+
+/*clients*/
+/* Clients Section */
+
+.clients-description {
+  max-width: 600px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.client-grid {
+  display: flex;
+  /* grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); */
+  /* grid-auto-flow: column; */
+  /* grid-auto-rows: 20px; */
+  /* gap: 100px; */
+  /* align-items: center; */
+  width: 100%;
+  margin: 0 auto;
+}
+
+.client-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 20px;
+  width: 200px;
+  padding: 10px 20px;
+  border: 1px solid rgba(0, 0, 0, 0.21);
+  text-align: center;
+  transition: transform 0.3s ease;
+}
+
+.client-item:last-child {
+  margin-right: 0;
+}
+
+.client-logo {
+  width: 100%;
+  object-fit: contain;
+}
+
+.client-item p {
+  font-size: 18px;
+  /* color: #fff; */
+  margin: 0;
+  margin-top: auto;
+}
+
+@media (max-width: 768px) {
+  .client-grid {
+    width: auto;
+    width: calc(100% + 40px);
+    margin-left: -20px;
+    margin-right: -20px;
+    overflow-x: auto;
+  }
+
+  .client-item {
+    flex-shrink: 0;
+  }
+
+  .client-logo {
+    width: 80%;
+    height: 80px;
+  }
+
+  .client-item p {
+    font-size: 12px;
+  }
+}
+
+/* what sets apart */
+.features-box {
+  display: flex;
+  margin-top: 100px;
+}
+
+.features-image {
+  width: 50%;
+}
+
+.features-image svg {
+  position: absolute;
+  left: 0;
+  width: 50vw;
+}
+
+.features-content {
+  width: 50%
+}
+
+.features-content h2 {
+  margin-bottom: 16px;
+}
+
+.feature-item {
+  margin-bottom: 20px;
+}
+
+.feature-item h4 {
+  /* margin-top: 10px; */
+  margin-bottom: 8px;
+}
+
+.feature-item p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+@media (max-width: 768px) {
+  .features-box {
+    position: relative;
+    margin-top: 40px;
+    z-index: 1;
+  }
+
+  .features-image {
+    width: auto;
+  }
+
+
+  .features-image svg {
+    width: 100vw;
+    top: 0;
+    bottom: 0;
+    left: -20px;
+    opacity: .25;
+    z-index: -1;
+  }
+  
+  .features-content {
+    width: 100%;
+  }
+}
+
+/*products*/
+.product-showcase {
+  
+  display: grid;
+  margin-top: 36px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 30px;
+}
+
+.product-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background: rgba(217, 217, 217, 0.20);
+  padding: 30px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.product-card h3 {
+  font-size: 22px;
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
+.product-card h3 span {
+  font-weight: 400;
+}
+
+.product-card p {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.product-card svg {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+}
+
+.product-link {
+  margin-top: auto;
+  font-size: 16px;
+  font-weight: 500;
+  color: inherit;
+  text-decoration: none;
+  transition: background-color 0.3s ease, border .2s linear;
+}
+
+.product-link-disabled {
+  opacity: .5;
+  pointer-events: none;
+}
+
+@media (max-width: 768px) {
+  .product-showcase {
+    
+  }
+
+  .product-card {
+    width: 100%;
+  }
+}
+
+/* contact */
+.contact-title {
+  margin-top: auto;
+  font-size: 72px;
+  font-weight: 500;
+}
+
+.contact-description {
+  max-width: 600px;
+  font-size: 16px;
+  line-height: 1.6;
+  font-weight: 400;
+}
+
+@media (max-width: 768px) {
+  .contact-title {
+    font-size: 38px;
+  }
+
+  .contact-description {
+    font-size: 14px;
+  }
+}
+/* contact */
+
+
+/* footer */
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: auto;
+  padding-top: 20px;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-logo-box {
+  margin-bottom: 10px;
+}
+
+.footer-logo {
+  height: 30px;
+}
+
+@media (max-width: 768px) {
+  .footer-logo {
+    height: 20px;
+  }
+}
+
+/* social */
+.socials {
+  /* margin-top: auto; */
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.social-item {
+  margin-left: 15px;
+  color: inherit;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.address, .copyright {
+  /* padding: 0 10px; */
+  text-align: center;
+  font-size: 12px;
+  color: #fff;
+  opacity: .5
+}
